fix z-index

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4880,7 +4880,7 @@ a, a:hover {
   right: 30px;
   width: 60px;
   height: 60px;
-  z-index: 1; }
+  z-index: 2; }
   .edit-buttons button {
     display: block;
     position: absolute;
@@ -4953,7 +4953,8 @@ a, a:hover {
   right: 0;
   background-color: white;
   overflow-y: scroll;
-  -webkit-overflow-scrolling: touch; }
+  -webkit-overflow-scrolling: touch;
+  z-index: 2; }
 
 .add-menu-item {
   position: relative;
