--- a/public/scss/button/_page_edit.scss
+++ b/public/scss/button/_page_edit.scss
@@ -4,7 +4,7 @@
     right: 30px;
     width: 60px;
     height: 60px;
-    z-index: 1;
+    z-index: 2;
     button {
         display: block;
         position: absolute;
