--- a/public/scss/layout/_add_menu.scss
+++ b/public/scss/layout/_add_menu.scss
@@ -7,6 +7,7 @@
     background-color: rgba(#fff, 1);
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
+    z-index: 2;
 }
 
 .add-menu-item {
